<resources>
    <string name="app_name">PMU GUI</string>
    <string name="textViewText">This is a text view</string>
    <string name="buttonText">Click</string>
    <string name="email_hint">name@company</string>
    <string name="to">to</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="checkbox1">Question 1</string>
    <string name="checkbox2">Question 2</string>
    <string name="radioText1">Yes</string>
    <string name="radioText2">Maybe</string>
    <string name="radioText3">No</string>
    <string name="nameReminder">Name</string>
    <string name="done">Done</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="available_programming_languages">Available Languages</string>
    <string name="country_hint">Country</string>
    <string name="button">Button</string>
    <string name="textView">TextView</string>
    <string name="buttonStart">Start Dialog</string>
    <string name="dialog_text">Dialog text</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="text">text</string>
    <string name="pickTime">Pick time</string>
    <string name="pickDate">Pick date</string>
    <string name="buttonSimpleToastText">Simple Toast</string>
    <string name="buttonComplexToastText">Complex Toast</string>
    <string name="hello_toast">Simple toast!</string>
    <string name="custom_toast">"Custom toast"</string>

    <string name="title_activity_two_items">Two Items</string>
    <string name="title_activity_button_actions">Button Actions</string>
    <string name="title_activity_text_view">Text View Test</string>
    <string name="title_activity_text_sizes">Text Sizes Test</string>
    <string name="title_activity_edit_text">Edit Text Test</string>
    <string name="title_activity_email">Email Activity</string>
    <string name="title_activity_keyboard">Keyboard Test</string>
    <string name="title_activity_auto_complete">Autocomplete Test</string>
    <string name="title_activity_spinner">Spinner Test</string>
    <string name="title_activity_checkbox">CheckBox Test</string>
    <string name="title_linear_activity_layout">Linear Layout Test</string>
    <string name="title_relative_activity_layout">Relative Layout Test</string>
    <string name="title_activity_radiobutton">RadioButton Test</string>
    <string name="title_activity_menu_items">Menu Items Test</string>
    <string name="title_activity_custom_list_view">Custom List View</string>
    <string name="title_activity_multiple_components">Multiple Components Test</string>
    <string name="title_activity_event_list">Event List</string>
    <string name="title_activity_move">Move Test</string>
    <string name="title_activity_dialog1">Dialog using AlertDialog</string>
    <string name="title_activity_dialog2">Dialog custom build</string>
    <string name="title_activity_time_picker">TimePicker Test</string>
    <string name="title_activity_date_picker">DatePicker Test</string>
    <string name="title_activity_toast">Toast Tests</string>

</resources>
